--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color = "#BF66F9"/>
+    <solid android:color = "#ff6347"/>
 
     <corners android:radius = "999dp"/>
 </shape>
