--- a/app/src/main/res/layout/activity_mock_exam.xml
+++ b/app/src/main/res/layout/activity_mock_exam.xml
@@ -11,17 +11,17 @@
 
     <Button
         android:id="@+id/Beginexam"
-        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
-        android:layout_width="59dp"
-        android:layout_height="57dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="160dp"
-        android:background="@android:drawable/checkbox_on_background"
-        android:onClick="onClick1"
+        android:background="@drawable/round_button"
+        android:text="GO"
         android:textAppearance="@android:style/TextAppearance.Holo.SearchResult.Title"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -33,10 +33,8 @@
         android:layout_width="266dp"
         android:layout_height="66dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="120dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:thumb="@android:color/holo_blue_bright"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
