--- a/app/src/main/res/layout/activity_vocab2.xml
+++ b/app/src/main/res/layout/activity_vocab2.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/action_bar"
-        layout="@layout/action_bar"></include>
+        layout="@layout/action_bar"/>
 
 
     <Button
